# wharfix

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  crate-hashes.json  db.sql  default.nix  drv.nix  flake.nix  justfile  package.nix  shell.nix  treefmt.nix
.github/workflows/: build.yml  bump.yml  check.yml
examples/: entryscript.nix  large.nix  sl.nix  toolbox.nix
nix/: sources.json
src/: clap.rs  cli.rs  errors.rs  exec.rs  log.rs  main.rs
tests/: arguments-test.nix  arguments.nix  oom-test.nix  oom.nix  ref.nix
tests/res/: new-index.nix  old-index.nix  registry-base.nix
