[package]
name = "wharfix"
version = "0.1.0"
edition = "2021"

# We should specify MSRV of 1.70 because we use OnceLock
rust-version = "1.70.0"

[dependencies]
clap = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
erased-serde = "0"
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = [ "full" ] }
futures = "0"
uuid = { version = "0", features = ["v4"] }
lazy_static = "1"
linereader = "0"
walkdir = "2"
git2 = "0"
tempdir = "0"
tempfile = "3"
regex = "1"
mysql = { version = "24", optional = true }
sha2 = "0"
dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main", features = ["log"], default-features = false }
async-process = "1"
get_chunk = { version = "1.2.0", features = ["stream", "size_format"] }
async-stream = "0.3.5"
log = "0.4.20"
pretty_env_logger = "0.5.0"

[features]
mysql = ["dep:mysql"]
oldlogs = []
