[package]
name = "wharfix"
version = "0.1.0"
edition = "2021"

# We should specify MSRV of 1.70 because we use OnceLock
rust-version = "1.70.0"

[dependencies]
actix-rt = "2"
actix-web = "4"
async-process = "1"
async-stream = "0.3.5"
clap = { version = "=4.4", features = ["cargo"] }
dbc-rust-modules = { git = "https://github.com/dbcdk/rust-modules", branch = "main", features = ["log"], default-features = false }
erased-serde = "0"
futures = "0"
get_chunk = { version = "1.2.0", features = ["stream", "size_format"] }
git2 = "0"
lazy_static = "1"
linereader = "0"
log = "0.4.20"
mysql = { version = "24", optional = true }
pretty_env_logger = "0.5.0"
regex = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0"
tempdir = "0"
tempfile = "3"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0", features = ["v4"] }
walkdir = "2"

[features]
mysql = ["dep:mysql"]
oldlogs = []
