[package]
name = "wharfix"
version = "0.1.0"
edition = "2021"

# We should specify MSRV of 1.70 because we use OnceLock
# ...and at least 1.81 because https://github.com/servo/rust-url/issues/992
rust-version = "1.81.0"

[dependencies]
actix-rt = "2"
actix-web = "4"
async-process = "1"
async-stream = "0.3"
clap = { version = "4", features = ["cargo"] }
erased-serde = "0.4"
futures = "0.3"
get_chunk = { version = "1.2", features = ["stream", "size_format"] }
git2 = "0.19"
lazy_static = "1"
libc = "0.2.169"
linereader = "0.4"
log = "0.4"
mysql = { version = "24", optional = true }
pretty_env_logger = "0.5"
regex = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
tempdir = "0.3"
tempfile = "3"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = ["v4"] }
walkdir = "2"

[features]
mysql = ["dep:mysql"]
